<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ccc"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.softwaresushi.android.atx.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/info_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <LinearLayout
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/info"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:layout_marginBottom="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:text="@string/app_description"
                        />
                    <Button
                        android:id="@+id/lower_ui_thread_priority_button"
                        android:text="@string/lower_ui_thread_priority"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        />
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_vertical_margin"/>

            <android.support.v7.widget.CardView
                android:id="@+id/java_thread_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <LinearLayout
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:text="@string/java_threads"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:layout_marginBottom="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <RelativeLayout
                        android:id="@+id/priority_slider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <TextView
                            android:id="@+id/label"
                            android:text="@string/priority"
                            android:layout_centerVertical="true"
                            android:layout_alignParentStart="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/text_seekbar_value"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:text="20"
                            />
                        <SeekBar
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/label"
                            android:layout_toStartOf="@id/text_seekbar_value"
                            android:id="@+id/seekbar_thread_priority"
                            />

                    </RelativeLayout>


                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/use_thread_kick_start"
                        android:id="@+id/use_thread_kick_start_checkbox"
                        android:layout_marginTop="15dp"
                        />

                    <TextView
                        android:id="@+id/thread_type_label"
                        android:text="@string/thread_type_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"/>

                    <RadioGroup
                        android:id="@+id/thread_type_radio_buttons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/thread_type_sleepy"
                            android:id="@+id/thread_type_sleepy_radio_button"/>

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/thread_type_county"
                            android:id="@+id/thread_type_county_radio_button"/>

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/thread_type_networky"
                            android:id="@+id/thread_type_networky_radio_button"/>
                    </RadioGroup>


                    <Button
                        android:id="@+id/button_start_thread"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_start_thread"
                        android:layout_marginTop="30dp"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>


    </ScrollView>



</RelativeLayout>
